<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dash"
            android:title="@string/menu_dash" />
        <item
            android:id="@+id/nav_time"
            android:title="@string/menu_time" />
        <item
            android:id="@+id/nav_events"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_notes"
            android:title="@string/menu_notes" />
        <item

        android:textSize="30sp"
            android:title="---------------------" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_reg"
            android:title="@string/menu_reg" />

    </group>
</menu>